# mplstyle

./: README.md  pyproject.toml
mplstyle/: __init__.py  astro.mplstyle  misc.py  scale.py
