[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mplstyle"
version = "0.0.1"
authors = [
    {name="Aaron Ouellette", email="aaronjo2@illinois.edu"},
]
description = "My matplotlib style and useful functions"
readme = "README.md"
license = {file="LICENSE"}
dependencies = [
    "matplotlib >= 3.1",
    "numpy"
]
requires-python = ">=3.10"
classifiers=[
    'Development Status :: 3 - Alpha',
	'License :: OSI Approved :: MIT License',
	'Programming Language :: Python :: 3',
]

[project.urls]
Repository = "https://github.com/ajouellette/mplstyle.git"
